--- a/client/main.html
+++ b/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>dist-app</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="manifest" href="/manifest.webmanifest">
 </head>
 
 <body>
