--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,7 @@
   <title>dist-app</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="/manifest.webmanifest">
+  <link rel="icon" href="/network-icon.svg">
 </head>
 
 <body>
